--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,10 @@
       sizes="16x16"
       href="%PUBLIC_URL%/favicon-16x16.png"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito:600,800,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta
