Update to SEO and load times

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="Description"
+      content="A guide to catching fish and bugs in Animal Crossing: New Horizons"
+    />
+    <link rel="preconnect" href="https://vignette.wikia.nocookie.net" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -93,7 +99,10 @@
     />
     <link
       href="https://fonts.googleapis.com/css?family=Nunito:600,800,900&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      href="styles.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
