Add google verification header

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
       name="Description"
       content="A guide to catching fish and bugs in Animal Crossing: New Horizons"
     />
+    <meta
+      name="google-site-verification"
+      content="eOrQW4zQjwvqxW_3B3WU5V0fw6Dr7YZHR8TV9iTILWg"
+    />
     <link rel="preconnect" href="https://vignette.wikia.nocookie.net" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
