--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       name="google-site-verification"
       content="eOrQW4zQjwvqxW_3B3WU5V0fw6Dr7YZHR8TV9iTILWg"
     />
-    <link rel="preconnect" href="https://vignette.wikia.nocookie.net" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -35,84 +34,83 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="%PUBLIC_URL%/apple-icon-57x57.png"
+      href="/apple-icon-57x57.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="60x60"
-      href="%PUBLIC_URL%/apple-icon-60x60.png"
+      href="/apple-icon-60x60.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="%PUBLIC_URL%/apple-icon-72x72.png"
+      href="/apple-icon-72x72.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="%PUBLIC_URL%/apple-icon-76x76.png"
+      href="/apple-icon-76x76.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="%PUBLIC_URL%/apple-icon-114x114.png"
+      href="/apple-icon-114x114.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="%PUBLIC_URL%/apple-icon-120x120.png"
+      href="/apple-icon-120x120.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="%PUBLIC_URL%/apple-icon-144x144.png"
+      href="/apple-icon-144x144.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="%PUBLIC_URL%/apple-icon-152x152.png"
+      href="/apple-icon-152x152.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/apple-icon-180x180.png"
+      href="/apple-icon-180x180.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="%PUBLIC_URL%/android-icon-192x192.png"
+      href="/android-icon-192x192.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%PUBLIC_URL%/favicon-32x32.png"
+      href="/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="%PUBLIC_URL%/favicon-96x96.png"
+      href="/favicon-96x96.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="%PUBLIC_URL%/favicon-16x16.png"
+      href="/favicon-16x16.png"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Nunito:600,800,900&display=swap"
       rel="preload"
-      href="styles.css"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta
       name="msapplication-TileImage"
-      content="%PUBLIC_URL%/ms-icon-144x144.png"
+      content="/ms-icon-144x144.png"
     />
     <title>Animal Crossing Catch Guide</title>
   </head>
@@ -122,6 +120,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
